# RIP-2013

./: CMakeLists.txt  LICENSE  README.md
cpp/: CMakeLists.txt  Node.h  a_star.cpp  a_star.h  location.h  parser.cpp  parser.h  state.cpp  state.h  world.cpp  world.h
cpp/scripts/: helloWorld.cpp  planner.cpp  testState.cpp
deliverables/: blackbox_hanoi_10_disks.txt  blackbox_hanoi_3_disks.txt  blackbox_hanoi_6_disks.txt  blackbox_hanoi_6_disks_other_team.txt
pddl/hanoi/: hanoi_10_disks.pddl  hanoi_3_disks.pddl  hanoi_6_disks.pddl
pddl/sokoban/: sokoban-domain.pddl  sokoban-domain_simple.pddl  sokoban-problem0_simple.pddl  sokoban-problem0_w_box.pddl  sokoban-problem1.pddl  sokoban-problem2.pddl  sokoban-problem2_no_assignment.pddl  sokoban-problem3.pddl
pddl/sokoban_template/: domain.pddl
problems/: problem1  problem2  problem3
results/: blackbox_problem1_default.txt  blackbox_problem2_default.txt  blackbox_problem_1_satz_solver.txt  blackbox_problem_1_walksat_solver.txt  blackbox_problem_2_satz_solver.txt  blackbox_problem_2_walksat_solver.txt  blackbox_problem_3_satz_solver.txt  blackbox_problem_3_walksat_solver.txt  blackbox_problem_challenge_satz_solver.txt  ff_hanoi_10_disks.txt  ff_hanoi_3_disks.txt  ff_hanoi_6_disks.txt  ff_hanoi_6_disks_other_team.txt  ff_problem1.txt  ff_problem2.txt  ff_problem3.txt  ff_problem_challenge.txt
solvers/: Blackbox44.tgz
solvers/Blackbox44/: Makefile  NOTES  README  README-compiling  README-versions  README.control  bbpddl.l  bbpddl.tab.cpp  bbpddl.tab.cpp.h  bbpddl.y  graph2wff.cpp  graphplan.cpp  lex.yy.cpp  utilities.cpp
solvers/vhpop/: Makefile  Makefile.in  bindings.cc  (+5 more)
writeup/: ff10disks.txt  ff6disks.txt  sokoban_astar_sols.txt  writeup.aux  writeup.tex  writeup.tex~
(+71 files in other folders)
